syntax="proto3";

option go_package="sdcc/pkg/overlay/api";

enum MessageType {
  APPLICATION = 0;
  ACK = 1;
  SYSTEM = 2;
}

message MessageSeq {
  MessageType type = 1;
  uint64 clock = 2;
  string src = 3;
  string id = 4;
  string data = 5;
}

message EnqueueReply {}


service MessageQueueSeq {
  rpc Enqueue(MessageSeq) returns (EnqueueReply);
}